--- a/style.css
+++ b/style.css
@@ -1,264 +1,93 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 html {
-    font-size: 15px;
+  font-size: 15px;
 }
 
 body {
-    font-family: sans-serif;
-    height: 100vh;
-    width: 100vw;
+  font-family: sans-serif;
+  height: 100vh;
+  width: 100vw;
 }
 
 .parent {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .main {
-    height: 600px;
-    width: 70%;
-    display: flex;
-    gap: 1rem;
-    align-items: center;
-    flex-direction: column;
-    /* border: 3px solid gray; */
-    border-radius: 12px;
-    box-shadow: 0px 0px 20px gray;
-    padding: 20px;
+  height: 70%;
+  width: 70%;
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  flex-direction: column;
+  border-radius: 12px;
+  box-shadow: 0px 0px 20px gray;
+  overflow-y: auto;
 }
 
 .tag {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 20%;
-    width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100px;
+  width: 80%;
 }
+
 .txt-div {
-    width: 100%;
-    color: gray;
+  width: 80%;
+  color: gray;
 }
 
 .btn {
-    width: 100px;
-    height: 30px;
-    border-radius: 10px;
-    border: none;
-    color: whitesmoke;
-    background: gray;
-    cursor: pointer;
+  width: 100px;
+  height: 30px;
+  border-radius: 10px;
+  border: none;
+  color: whitesmoke;
+  background: gray;
+  cursor: pointer;
 }
 
 .title {
-    font-family: "Orbitron";
-    font-size: 1.8rem;
-    color: rgb(63, 63, 63);
-}
-.i-field-t {
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-    width: 100%;
-    height: 60px;
-}
-.title-field {
-    width: 100%;
-    height: 30px;
-    text-align: left;
-    padding-left: 10px;
+  font-family: "Orbitron";
+  font-size: 1.8rem;
+  color: rgb(63, 63, 63);
 }
 
-.i-field-c {
-    width: 100%;
-    height: 30%;
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-}
-.code-field {
-    width: 100%;
-    height: 100%;
-    text-align: left;
-    padding-left: 10px;
-}
-.key-place,
-.code-place {
-    color: gray;
-}
-#save-create {
-    width: 80%;
-    height: 40px;
-}
-
-.p-txt-div {
-    width: 80%;
-    color: gray;
-}
-
-.o-field-main {
-    height: 50%;
-    width: 80%;
-}
-.o-field-txt {
-    height: 100%;
-    width: 100%;
-    text-align: left;
-    border: 2px solid gray;
-    border-radius: 10px;
-    padding: 3px;
-}
 .saver {
-    width: 100%;
-    overflow-y: auto;
+  width: 90%;
+
 }
+
 .snippets {
-    display: grid;
-    gap: 0.5rem;
+  display: grid;
+  gap: 0.5rem;
 }
+
 .snippet-item {
-    background: gainsboro;
-    list-style: none;
-    padding: 0.5rem 1rem;
-    margin-inline: 1.5rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  background: gainsboro;
+  list-style: none;
+  padding: 0.5rem 1rem;
+  margin-inline: 1.5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 5px;
 }
 
 .btn-del {
-    width: 100px;
-    height: 30px;
-    border-radius: 12px;
-    border: none;
-    color: whitesmoke;
-    background: rgba(140, 140, 140, 0.363);
-}
-.msg-div {
-    display: none;
-}
-.message {
-    height: 80px;
-    width: 200px;
-    /* border: 1px solid; */
-    box-shadow: 2px 2px 3px green;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    border-radius: 10px;
-}
-.msg-h {
-    font-size: 13px;
-    color: green;
-}
-
-/* Smartphones (portrait and landscape) ----------- */
-@media only screen and (max-width: 600px) {
-    body {
-        font-family: sans-serif;
-        height: 100vh;
-        width: 100vw;
-    }
-    .main {
-        width: 85%;
-    }
-    .tag {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        height: 15%;
-        width: 100%;
-    }
-
-    .btn {
-        width: 80px;
-        height: 30px;
-        border-radius: 10px;
-        border: none;
-        color: whitesmoke;
-        background: gray;
-        cursor: pointer;
-    }
-
-    .title {
-        font-family: "Orbitron";
-        font-size: 1.2rem;
-        color: rgb(63, 63, 63);
-    }
-    .txt-div {
-        width: 100%;
-        font-size: 14px;
-    }
-    .saver {
-        width: 100%;
-        overflow-y: auto;
-    }
-    .btn-del {
-        width: 80px;
-        height: 30px;
-        border-radius: 12px;
-        border: none;
-        color: whitesmoke;
-        background: rgba(140, 140, 140, 0.363);
-    }
-    .snippets {
-        height: 400px;
-        overflow-x: hidden;
-    }
-    .snippet-item {
-        width: 90%;
-        margin: 0;
-        height: 40px;
-    }
-    .p-txt-div {
-        width: 100%;
-        color: gray;
-    }
-
-    .o-field-main {
-        height: 50%;
-        width: 100%;
-    }
-    .i-field-t {
-        display: flex;
-        flex-direction: column;
-        gap: 0.5rem;
-        width: 100%;
-        height: 60px;
-    }
-    .title-field {
-        width: 100%;
-        height: 30px;
-        text-align: left;
-        padding-left: 10px;
-    }
-
-    .i-field-c {
-        width: 100%;
-        height: 30%;
-        display: flex;
-        flex-direction: column;
-        gap: 0.5rem;
-    }
-    .code-field {
-        width: 100%;
-        height: 100%;
-        text-align: left;
-        padding-left: 10px;
-    }
-}
-
-@media only screen and (min-width: 601px) and (max-width: 900px) {
-    body {
-        font-family: sans-serif;
-        height: 100vh;
-        width: 100vw;
-    }
+  width: 100px;
+  height: 30px;
+  border-radius: 12px;
+  border: none;
+  color: black;
+  background: rgba(140, 140, 140, 0.363);
 }
