--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 .parent {
-  height: 100%;
+  height: 600px;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -29,7 +29,7 @@ body {
   align-items: center;
   flex-direction: column;
   border-radius: 12px;
-  box-shadow: 0px 0px 20px gray;
+  box-shadow: 0.5rem 0.5rem 1rem gray;
   overflow-y: auto;
 }
 
@@ -64,7 +64,6 @@ body {
 
 .saver {
   width: 90%;
-
 }
 
 .snippets {
